# $Id: Changes,v 1.67 2003/10/07 22:20:39 petdance Exp $
Revision history for Perl extension WWW::Mechanize

0.62	October 7, 2003  5:00pm
	[ENHANCEMENTS]
	* Added autocheck parm, to tell your Mech object to die on
	  any error.  This saves you from having to check yourself.
	  This closes RT #3056.
	* Renamed the internal _carp() method as warn().
	* Added a die() method.
	* Can now override the warn() and die() handlers in the
	  constructor.

	[FIXES]
	* mech-dump.t no longer runs if you're not installing mech-dump.
	  See RT #3724.

	[DOCUMENTATION]
	* More FAQs.  Thanks to Gavin Estey.


0.61	October 6, 2003  6:30pm
	No new functionality here.  It's mostly to get the new tests
	into the pipeline so the CPAN testers can run 'em.
	
	[FIXES]
	* Missing dependency on File::Temp.  Thanks, Ask.

	[ENHANCEMENTS]
	* Added the test case for the form processing problem as a .t
	  file, since I spent so long getting it down to a simple case.
	* Internal code uses accessors instead of direct hash entries.
	  Prepare for deprecation of existing hash entries!

	[DOCUMENTATION]
	* The FAQ is now its own document at WWW::Mechanize::FAQ.


0.60	September 22, 2003  10:00pm
	[FIXES]
	* Changed how t/failure.t tries to fail.  It used to hit
	  a bogus hostname in .com, but with Verisign doing its
	  SiteFinder crap, even bogus addresses in .com succeed.

	[ENHANCEMENTS]
	* Added _make_request() to let WWW::Mechanize::Cached easily
	  hook into the request chain.

0.59	September 3, 2003  11:56pm
	[FIXES]
	* Squelched a warning in follow() where it tries to do a regex
	  match against an undef value.
	* The page stack functionality, including the back() button,
	  was entirely broken.  Now it works.  Thanks to the mighty
	  Iain Truskett for help.

	[ENHANCEMENTS]
	* Added the mech-dump script, which replaces mech-forms.
	  It will dump forms and lists of links.  Eventually it will
	  do lists of images, too, but not yet.

0.58	August 14, 2003  11:30pm